# arrowbatch-rs

./: Cargo.toml
src/: batch.rs  cache.rs  lib.rs  proto.rs  reader.rs  socket.rs  utils.rs
tests/: test_reader.rs  test_sequential.rs
