[package]
name = "arrowbatch"
version = "1.6.0"
edition = "2021"
authors = ["Guillermo Rodriguez <guillermo@telos.net>"]
description = "Reader for arrow-batch format"
license = "MIT"


[dependencies]
arrow = "51.0.0"
base64 = "0.22.0"
hex = "0.4.3"
num = "0.4.1"
num-bigint = "0.4.4"
rlp = "0.5.2"
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.115"
zstd = "=0.13.0"
