[package]
name = "arrowbatch"
version = "1.11.0"
edition = "2021"
authors = ["Guillermo Rodriguez <guillermo@telos.net>"]
description = "Reader for arrow-batch format"
license = "MIT"


[dependencies]
arrow = "51.0.0"
base64 = "0.22.0"
chrono = "0.4.38"
futures = "0.3.30"
futures-util = "0.3.30"
hex = "0.4.3"
moka = { version = "0.12.7", features = ["sync"] }
num = "0.4.1"
num-bigint = "0.4.4"
rlp = "0.5.2"
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.115"
tokio = {version = "1.37.0", features = ["full"]}
tokio-tungstenite = "0.21.0"
tungstenite = "0.21.0"
uuid = {version = "1.8.0", features = ["v4"]}
zstd = "=0.13.0"
